--- a/css/index.css
+++ b/css/index.css
@@ -163,13 +163,41 @@ img {
   max-width: 100%;
   height: auto;
 }
-.container {
-  max-width: 800px;
+.super-container {
   width: 100%;
+}
+.super-container .container {
+  max-width: 800px;
+  width: 80%;
   margin: 0 auto;
 }
-.footer {
+.nav-container {
   width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  border-bottom: 2px dashed grey;
+  align-content: center;
+  margin-top: 50px;
+}
+.nav-container h1 {
+  margin-right: 275px;
+}
+.nav-container .nav-bar {
+  display: flex;
+  justify-content: flex-end;
+}
+.nav-container .nav-bar a {
+  display: flex;
+  justify-content: flex-end;
+  align-content: center;
+  padding: 20px;
+  font-size: 1.7rem;
+  text-decoration: none;
+  color: black;
+}
+.footer {
+  margin: 0 auto 30px;
+  width: 80%;
   border-top: 2px dashed silver;
   background: #FFEBCD;
 }
@@ -179,8 +207,13 @@ img {
   font-size: 1.6rem;
   padding: 20px;
 }
+.home .fun-bus {
+  width: 80%;
+  margin: 0 auto 30px;
+}
 .home .content-section {
-  margin: 30px 0;
+  width: 80%;
+  margin: 0 auto 30px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -209,13 +242,15 @@ img {
   padding-left: 0;
 }
 .home .content-destination {
-  width: 75%;
+  width: 80%;
   margin: 0 auto 30px;
 }
 .home .content-destination img {
   border-radius: 10px;
 }
 .home .content-pick {
+  width: 80%;
+  margin: 0 auto 30px;
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
