--- a/less/global.less
+++ b/less/global.less
@@ -39,8 +39,12 @@ img {
   height: auto;
 }
 
-.container {
-  max-width: 800px;
-  width: 100%;
-  margin: 0 auto;
+.super-container {
+  width:100%;
+  .container {
+    max-width: 800px;
+    width: 80%;
+    margin: 0 auto;
+  }
+  
 }
