--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,12 @@
 .home {
+  .fun-bus{
+    width:80%;
+    margin:0 auto 30px;
+  }
 
   .content-section {
-    margin: 30px 0;
+    width:80%;
+    margin:0 auto 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -39,7 +44,7 @@
   }
 
   .content-destination {
-    width: 75%;
+    width: 80%;
     margin: 0 auto 30px;
 
     img {
@@ -48,6 +53,8 @@
   }
 
   .content-pick {
+    width:80%;
+    margin:0 auto 30px;
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
     display: flex;
