--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,31 @@
 // Navigation Styles here
+
+.nav-container {
+  width:100%;
+  display:flex;
+  justify-content: flex-end;
+  border-bottom:1px dashed @navigation-border;
+  align-content: center;
+  margin-top:50px;
+
+  h1{
+    margin-right:275px;
+    .lighten(@color);
+  
+  }
+  .nav-bar {
+    display:flex;
+    justify-content: flex-end;
+    
+    a{
+      display:flex;
+      justify-content: flex-end;
+      align-content:center;
+      padding:20px;
+      font-size:1.7rem;
+      text-decoration: none;
+      color:black;
+    }
+  }
+  
+}
