--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,16 +1,16 @@
 // Navigation Styles here
 
 .nav-container {
-  width:100%;
+  margin:32px auto 0px;
+  width: 100%;
   display:flex;
-  justify-content: flex-end;
-  border-bottom:1px dashed @navigation-border;
+  justify-content: space-evenly;
+  border-bottom:2px dashed @navigation-border;
   align-content: center;
-  margin-top:50px;
 
   h1{
-    margin-right:275px;
-    .lighten(@color);
+    display:flex;
+     margin-right:275px;
   
   }
   .nav-bar {
