--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,13 @@
 .home {
+
   .fun-bus{
     width:80%;
     margin:0 auto 30px;
+    .about{
+      border-bottom:2px dashed @navigation-border;
+      padding-top:20px;
+    }
+
   }
 
   .content-section {
@@ -11,9 +17,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
-   
-    
-    .text-content {
+   .text-content {
       width: 48%;
       padding-right: 1%;
     }
@@ -29,6 +33,8 @@
   }
 
   .inverse-content {
+    width: 80%;
+    margin:0 auto 30px;
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
 
@@ -53,6 +59,8 @@
   }
 
   .content-pick {
+    display:flex;
+    justify-content: space-between;
     width:80%;
     margin:0 auto 30px;
     padding-top: 30px;
@@ -61,8 +69,11 @@
     justify-content: space-between;
 
     .destination {
-      width: 30%;
+      width: 24%;
       margin-bottom: 30px;
     }
+  }
+  .btn{
+    .btn();
   }
 }// home
