--- a/less/footer.less
+++ b/less/footer.less
@@ -3,6 +3,10 @@
   width: 80%;
   border-top: 2px dashed silver;
   background: @sandy-beach;
+
+  @media @phone {
+    width:100%;
+  }
   
   p {
     text-align: center;
