--- a/less/mixins.less
+++ b/less/mixins.less
@@ -11,8 +11,13 @@
   display:block;
   background: @eastern-blue;
   padding:8%;
-  border-radius:7px;
+  border-radius:18px;
   color:white;
   text-align: center;
   font-size:1.7rem;
+
+  @media @phone {
+    padding:5%;
+
+  }
 }
