--- a/css/index.css
+++ b/css/index.css
@@ -168,23 +168,39 @@ img {
   width: 100%;
   margin: 0 auto;
 }
-.nav-container {
+.super-nav {
+  width: 100%;
+  border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .super-nav {
+    width: 100%;
+  }
+}
+.super-nav .nav-container {
   margin: 32px auto 0px;
   width: 100%;
+  max-width: 800px;
   display: flex;
-  justify-content: space-evenly;
-  border-bottom: 2px dashed #C0C0C0;
+  justify-content: space-between;
   align-content: center;
 }
-.nav-container h1 {
-  display: flex;
-  margin-right: 275px;
+@media (max-width: 500px) {
+  .super-nav .nav-container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 }
-.nav-container .nav-bar {
+.super-nav .nav-container h1 {
+  padding: 8px 0px;
+}
+.super-nav .nav-container .nav-bar {
   display: flex;
   justify-content: flex-end;
 }
-.nav-container .nav-bar a {
+.super-nav .nav-container .nav-bar a {
   display: flex;
   justify-content: flex-end;
   align-content: center;
@@ -199,43 +215,83 @@ img {
   border-top: 2px dashed silver;
   background: #FFEBCD;
 }
+@media (max-width: 500px) {
+  .footer {
+    width: 100%;
+  }
+}
 .footer p {
   text-align: center;
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
 }
+.home {
+  /* Close of content-section */
+}
 .home .fun-bus {
-  width: 80%;
+  width: 100%;
   margin: 0 auto 30px;
 }
 .home .fun-bus .about {
   border-bottom: 2px dashed #C0C0C0;
   padding-top: 20px;
 }
+@media (max-width: 500px) {
+  .home .fun-bus {
+    width: 80%;
+  }
+}
 .home .content-section {
-  width: 80%;
+  width: 100%;
   margin: 0 auto 30px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  /* Close of text-content */
+  /* Close of image-content */
+}
+@media (max-width: 500px) {
+  .home .content-section {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+  }
 }
 .home .content-section .text-content {
   width: 48%;
   padding-right: 1%;
 }
+@media (max-width: 500px) {
+  .home .content-section .text-content {
+    width: 100%;
+  }
+}
 .home .content-section .img-content {
   width: 48%;
   padding-left: 1%;
+  /* close of img */
+}
+@media (max-width: 500px) {
+  .home .content-section .img-content {
+    width: 100%;
+  }
 }
 .home .content-section .img-content img {
   border-radius: 10px;
 }
 .home .inverse-content {
-  width: 80%;
+  width: 100%;
   margin: 0 auto 30px;
   padding-bottom: 30px;
   border-bottom: 2px dashed #C0C0C0;
+}
+@media (max-width: 500px) {
+  .home .inverse-content {
+    width: 80%;
+    display: flex;
+    flex-direction: column-reverse;
+  }
 }
 .home .inverse-content .text-content {
   padding-left: 1%;
@@ -249,27 +305,50 @@ img {
   width: 80%;
   margin: 0 auto 30px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 80%;
+  }
+}
 .home .content-destination img {
   border-radius: 10px;
 }
 .home .content-pick {
-  width: 80%;
+  width: 102%;
   margin: 0 auto 30px;
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
   display: flex;
   justify-content: space-between;
 }
+@media (max-width: 500px) {
+  .home .content-pick {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+  }
+}
 .home .content-pick .destination {
   width: 24%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick .destination {
+    width: 80%;
+    margin: 0 auto 30px;
+  }
 }
 .home .btn {
   display: block;
   background: #17A2B8;
   padding: 8%;
-  border-radius: 7px;
+  border-radius: 18px;
   color: white;
   text-align: center;
   font-size: 1.7rem;
+}
+@media (max-width: 500px) {
+  .home .btn {
+    padding: 5%;
+  }
 }
