--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,42 +1,65 @@
 .home {
 
   .fun-bus{
-    width:80%;
+    width:100%;
     margin:0 auto 30px;
     .about{
       border-bottom:2px dashed @navigation-border;
       padding-top:20px;
     }
+    @media @phone {
+      width:80%;
+    }
 
   }
 
   .content-section {
-    width:80%;
+    width:100%;
     margin:0 auto 30px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
 
+    @media @phone {
+      width:80%;
+      display:flex;
+      flex-direction:column;
+    }
    .text-content {
       width: 48%;
       padding-right: 1%;
-    }
+      
+        @media @phone {
+          width:100%;
+        }
+    }/* Close of text-content */
 
     .img-content {
       width: 48%;
       padding-left: 1%;
 
+      @media @phone {
+        width:100%;
+      }
+
       img {
         border-radius: 10px;
-      }
-    }
-  }
+      } /* close of img */
+    }/* Close of image-content */
+  } /* Close of content-section */
 
   .inverse-content {
-    width: 80%;
+    width: 100%;
     margin:0 auto 30px;
     padding-bottom: 30px;
     border-bottom: 2px dashed @navigation-border;
+
+    @media @phone {
+      width:80%;
+      display:flex;
+      flex-direction:column-reverse;
+
+    }
 
     .text-content {
       padding-left: 1%;
@@ -53,6 +76,10 @@
     width: 80%;
     margin: 0 auto 30px;
 
+    @media @phone {
+      width:80%;
+    }
+
     img {
       border-radius: 10px;
     }
@@ -61,16 +88,27 @@
   .content-pick {
     display:flex;
     justify-content: space-between;
-    width:80%;
+    width:102%;
     margin:0 auto 30px;
     padding-top: 30px;
     border-top: 2px dashed @navigation-border;
     display: flex;
     justify-content: space-between;
 
+    @media @phone {
+      width:80%;
+      display:flex;
+      flex-direction:column;
+    }
+
     .destination {
       width: 24%;
       margin-bottom: 30px;
+
+      @media @phone {
+        width:80%;
+        margin:0 auto 30px;
+      }
     }
   }
   .btn{
